# MagImacRun

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/geometry/: CMakeLists.txt
app/geometry/include/geometry/: joueur.hpp  spatial_object.hpp
app/geometry/src/: joueur.cpp  spatial_object.cpp
app/graphics/: CMakeLists.txt
app/graphics/include/graphics/: Cam.hpp  Cam2.hpp  Dessin.hpp  Mesh.hpp  Objet.hpp  Rectangle.hpp  camera.hpp  cameraA.hpp  cameraFPers.hpp  cameraTPers.hpp  case.hpp  crystal.hpp  genText.hpp  model.hpp  readFile.hpp  renderer.hpp  shader.hpp  slice.hpp  tile.hpp  wall.hpp
app/graphics/src/: Dessin.cpp  Rectangle.cpp  camera.cpp  crystal.cpp  genText.cpp  model.cpp  readFile.cpp  renderer.cpp  tile.cpp  wall.cpp
app/shaders/: crystal.fs.glsl  crystal.vs.glsl  cube.fs.glsl  cube.vs.glsl  skybox.fs.glsl  tile.fs.glsl  tile.vs.glsl
assets/map/: map.txt
glimac/: CMakeLists.txt
glimac/include/glimac/: ShapeVertex.hpp  Skybox.hpp  Text.cpp  Text.hpp  Texture.hpp
glimac/src/: Menu.cpp  Skybox.cpp  Texture.cpp
lib/: CMakeLists.txt
lib/geometry/include/: spatial_object.hpp
lib/glimac/include/glimac/: FreeflyCamera.hpp  Inputs.hpp  Skybox.hpp  TrackballCamera.hpp
lib/glimac/src/: Inputs.cpp  Skybox.cpp
lib/graphics/include/: camera.hpp  model.hpp  renderer.hpp  shader.hpp
lib/graphics/src/: camera.cpp  model.cpp  renderer.cpp  shader.cpp
